--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
                 <ul>
                     <li>
                         <input type="radio" name="answer" id="ans1" class="answer">
-                    <label for="answer" id="option1">Answer option</label>
+                    <label for="answer" id="option1"></label>
                     </li>
 
                     <li>
                         <input type="radio" name="answer" id="ans2" class="answer">
-                    <label for="answer" id="option2">Answer option</label>
+                    <label for="answer" id="option2"></label>
                     </li>
 
                     <li>
                         <input type="radio" name="answer" id="ans3" class="answer">
-                        <label for="answer" id="option3">Answer option</label>
+                        <label for="answer" id="option3"></label>
                     </li>
 
                     <li>
                         <input type="radio" name="answer" id="ans4" class="answer">
-                        <label for="answer" id="option4">Answer option</label>
+                        <label for="answer" id="option4"></label>
                     </li>
                     
 
